[project]
name = "onchain-alibi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "web3>=7.0.0",
    "requests>=2.0.0",
    "fastapi>=0.115.14",
    "uvicorn[standard]>=0.35.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "sqlmodel>=0.0.24",
    "scikit-learn>=1.5.0",
    "faiss-cpu>=1.8.0",
    "numpy>=2.3.1",
    "pandas>=2.2.0",
    "typer>=0.16.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "apscheduler>=3.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

